# AMRrules

./: .gitignore  .readthedocs.yaml  Makefile  README.md  copy_rules.py  copy_rules.sh  example_annotatedAMRreport.tsv  genome_report.rtf  organism_specific_rules.tsv  parse_amrfinder.py  pyproject.toml  pytest.ini
.github/workflows/: generate-example-outputs.yml
docs/source/: conf.py  faq.rst  index.rst  installation.rst  interpretation.rst  planned.rst  rules.rst  specification.rst  syntax.rst  tests.rst  usage.rst
example_data_kleb/: ERR257656_amrFinderPlusOutput_node.tsv  EuSCAPE_DE047_amrFinderPlusOutput_node.tsv  EuSCAPE_HR089_amrFinderPlusOutput_node.tsv  INF014_amrFinderPlusOutput_node.tsv
rules/: Acinetobacter_baumannii.tsv  Acinetobacter_baumannii.txt  Bordetella.tsv  Burkholderia_pseudomallei.tsv  Burkholderia_pseudomallei.txt  Campylobacter_jejuni.tsv  Enterobacter.txt  Enterococcus_faecalis.txt  Enterococcus_faecium.tsv  Enterococcus_faecium.txt  Escherichia_coli.tsv  Escherichia_coli.txt  Klebsiella_oxytoca.txt  Klebsiella_oxytoca_complex.tsv  Klebsiella_oxytoca_complex.txt  Klebsiella_pneumoniae.txt  Legionella.tsv  Legionella.txt  Mycobacterium_tuberculosis.tsv  Neisseria_gonorrhoeae.tsv  Neisseria_gonorrhoeae.txt  Neisseria_meningitidis.tsv  Proteus_mirabilis.txt  Pseudomonas_aeruginosa.tsv  Pseudomonas_aeruginosa.txt  Salmonella_enterica.txt  Shewanella.tsv  Staphylococcus_aureus.tsv  Staphylococcus_aureus.txt  Yersinia.tsv  Yersinia.txt
src/amrrules/: __init__.py  __main__.py  annotator.py  cli.py  (+10 more)
tests/: test_cli.py  test_output_same.py
(+134 files in other folders)
